# rover-v1

./: .gitignore  CMakeLists.txt  README.md  exploration_node.cpp
launch/: bayer_bridge.py  bringup.launch.py  bringup_with_exploration.launch.py  camera_node.py  imu_node.py  lidar_node.py  listener.launch.py  motor_controller_node.py  nav2.launch.py  neural_network_node.py  robot_state_publisher.launch.py  servo_controller_node.py  slam.launch.py  slam_launch.py  slam_toolbox_params.yaml  talker.launch.py
src/: camera_node.cpp  exploration_node.cpp  imu_node.cpp  lidar_node.cpp  motor_controller_node.cpp
urdf/: robot.urdf
